Fix details view overlay animation causing shift
Use scale transform to avoid the shift.

--- a/axelor-front/src/views/grid/grid.module.scss
+++ b/axelor-front/src/views/grid/grid.module.scss
@@ -31,8 +31,10 @@
   height: 100%;
   width: 50%;
   transition: all 0.2s;
+  transform: scaleX(100%);
+  transform-origin: right;
   &.hide {
-    right: -50%;
+    transform: scaleX(0);
     z-index: 0;
   }
 }
@@ -40,27 +42,13 @@
 @media screen and (max-width: 767px) {
   .details-view-overlay {
     width: 100%;
-    &.hide {
-      right: -100%;
-    }
   }
 }
 
 [dir="rtl"] .details-view-overlay {
   left: 0;
   right: auto;
-  &.hide {
-    left: -50%;
-    right: auto;
-  }
-}
-
-@media screen and (max-width: 767px) {
-  [dir="rtl"] .details-view-overlay {
-    &.hide {
-      left: -100%;
-    }
-  }
+  transform-origin: left;
 }
 
 .overlay {
